fix hidden submit button on mobile

--- a/src/pages/RegistrationPage/RegistrationPage.css
+++ b/src/pages/RegistrationPage/RegistrationPage.css
@@ -6,7 +6,7 @@
   overflow-x: hidden;
   padding-top: 80px;
   height: auto;
-  min-height: 100vh;
+  min-height: 100%;
   padding-left: 10vw;
   text-align: left;
   display: block;
